src/objects/ensxapp__SAP_Customer_Search_Mapping__mdt.object
<CustomObject>
    <description>Configure SAP customer search fields and their mapping to Account fields</description>
    <fields>
        <fullName>ensxapp__Account_Field__c</fullName>
        <description>The account field used to pre-populate the search criteria</description>
        <label>Account Field</label>
        <metadataRelationshipControllingField>ensxapp__SAP_Customer_Search_Mapping__mdt.ensxapp__Entity__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>SAP_Customer_Search_Mappings</relationshipLabel>
        <relationshipName>SAP_Customer_Search_Mappings</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ensxapp__Address_SubField__c</fullName>
        <description>The Address sub-field to use if Account Field is BillingAddress or ShippingAddress</description>
        <label>Address Sub-Field</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>Country</fullName>
                </value>
                <value>
                    <fullName>CountryCode</fullName>
                </value>
                <value>
                    <fullName>PostalCode</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>StateCode</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ensxapp__Editable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Should the user be able to alter the search criteria?</description>
        <label>Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ensxapp__Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>SAP_Customer_Search_Mappings</relationshipLabel>
        <relationshipName>SAP_Customer_Search_Mappings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ensxapp__Parent__c</fullName>
        <label>SAP Customer Information Setting</label>
        <referenceTo>ensxapp__SAP_Customer_Information_Settings__mdt</referenceTo>
        <relationshipLabel>SAP Customer Search Mappings</relationshipLabel>
        <relationshipName>SAP_Customer_Search_Mappings</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ensxapp__SAP_Field__c</fullName>
        <description>The SAP Customer field to search</description>
        <label>SAP Field</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CustomerName</fullName>
                    <default>true</default>
                    <label>CustomerName</label>
                </value>
                <value>
                    <fullName>CustomerAccountGroup</fullName>
                </value>
                <value>
                    <fullName>PostalCode</fullName>
                </value>
                <value>
                    <fullName>TelephoneNumber</fullName>
                </value>
                <value>
                    <fullName>EmailAddress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ensxapp__Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Should the search field be visible on the SAP Customer Link page?</description>
        <inlineHelpText>If the Account Field is mapped and the field is not visible, it will still apply the account value as search criteria</inlineHelpText>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>SAP Customer Search Mapping</label>
    <pluralLabel>SAP Customer Search Mappings</pluralLabel>
</CustomObject>